--- a/Source/TasUi/MainWindow.xaml
+++ b/Source/TasUi/MainWindow.xaml
@@ -24,6 +24,11 @@
                 <Label x:Name="SelectGameLabel" Content="Select active game" HorizontalAlignment="Left" Margin="62,27,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="15"/>
                 <Label x:Name="ElapsedTimeLabel" Content="Millisecs Elapsed:" HorizontalAlignment="Left" Margin="274,166,0,0" VerticalAlignment="Top" FontSize="15"/>
                 <TextBox x:Name="ElapsedTimeTextBox" HorizontalAlignment="Left" Margin="423,163,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" FontSize="13" Height="35"/>
+                <Button x:Name="RefreshButton" Content="" HorizontalAlignment="Left" Margin="235,62,0,0" VerticalAlignment="Top" Width="34" Height="36" Click="OnClickRefresh">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/refresh.bmp" TileMode="None" Stretch="UniformToFill"/>
+                    </Button.Background>
+                </Button>
             </Grid>
         </TabItem>
         <TabItem Header="Key playback">
@@ -42,7 +47,7 @@
             <Grid Background="#FFE5E5E5">
                 <Button x:Name="StartInputRecordingButton" Content="Start recording inputs" HorizontalAlignment="Left" Margin="14,17,0,0" VerticalAlignment="Top" Height="36" Width="133" Click="OnClickStartInputRecordingButton" Grid.ColumnSpan="2"/>
                 <Button x:Name="StopInputRecordingButton" Content="Stop recording inputs" HorizontalAlignment="Left" Margin="14,58,0,0" VerticalAlignment="Top" Height="36" Width="133" Click="OnClickStopInputRecordingButton" Grid.ColumnSpan="2"/>
-                <Button Content="Button" HorizontalAlignment="Left" Margin="235,35,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+                <Button Content="Debug" HorizontalAlignment="Left" Margin="235,35,0,0" VerticalAlignment="Top" Click="Button_Click"/>
             </Grid>
         </TabItem>
     </TabControl>
